2006-02-22  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/LightweightContainer.java
	(testLoc1): Fixed up tests so it fails without pending
	lightweight patch.

2006-02-22  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/TestHarness.java
	(checkColor): Removed.
	(checkRectangleOuterColors): Removed.
	(checkRectangleCornerColors): Removed.
	* gnu/testlet/java/awt/Container/LightweightContainer.java
	(testLoc): Added comment, changed to use LocationTests.
	(testWindow): Likewise.
	(testLoc1): Added new test.
	(test): Added call to testLoc1.
	* gnu/testlet/java/awt/Frame/size1.java
	(test): Added comment, changed to use LocationTests.
	* gnu/testlet/java/awt/LocationTests.java: New class.

2006-02-22  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/TestHarness.java
	(checkColor): Fixed API documentation.
	(checkRectangleOuterColors): Likewise.
	* gnu/testlet/java/awt/Container/LightweightContainer.java
	(testWindow): Added documentation.
	(testLoc): Likewise.
	* gnu/testlet/java/awt/Frame/size1.java
	(test): Added documentation.

2006-02-21  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/TestHarness.java
	(checkColor): New method used to compare colors.
	(checkRectangleOuterColors): New method used to compare the
	colors of a rectangle's corners to the colors of the pixels
	surrounding the corners.
	(checkRectangleCornerColors): New method used to compare
	the colors of the pixels at the corners of a rectangle, to
	a given color.
	* gnu/testlet/java/awt/Container/LightweightContainer.java:
	New Test.
	* gnu/testlet/java/awt/Frame/size1.java
	(checkColor): Removed.
	(test): Changed to use new methods in TestHarness.

2006-02-21  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/insert.java:
	(testNewlines): New test.

2006-02-21  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JSpinner/ListEditor/getModel.java: Replaced
	with correct file.
