@@ -1,3 +1,8 @@
+2006-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* gnu/testlet/javax/swing/JFrame/HeavyweightComponent.java: New
+	test.
+
 2006-02-22  Lillian Angel  <langel@redhat.com>
 
 	* gnu/testlet/java/awt/Container/LightweightContainer.java
